--- a/src/main/resources/org/sigmah/public/css/sigmah.css
+++ b/src/main/resources/org/sigmah/public/css/sigmah.css
@@ -215,6 +215,7 @@ body {font-family:Arial;font-size:8pt}
 .important-label-white{font-size:8pt;padding:5px;color:white}
 .monitor-progress-bar{width:50%;z-index:200}
 .filtered-column-header{font-weight:bold;font-style:italic;background:url("../images/icon/filter.png") no-repeat right}
+.delete-anchor {background: url("image/link_delete.png") no-repeat;padding-left: 20px;}
 .project-model-type-radio,.project-model-type-radio *{cursor:pointer}
 
 /* Project : RatioBar */
